--- a/inst/tutorials/tidyeval/tidyeval.Rmd
+++ b/inst/tutorials/tidyeval/tidyeval.Rmd
@@ -14,17 +14,18 @@ library("tibble")
 library("glue")
 library("learnr.tidyeval")
 
-tbl_mtcars <- as_tibble(mtcars)
+options(width = 100)
+knitr::opts_chunk$set(comment = "#>")
 ```
 
 ## Introduction
 
-Confession: for me, this tutorial is an exercise in self-help. For years, I have struggled to wrap my head around non-standard evaluation. I would sit down over a weekend and get myself to the point that I _thought_ I understood it, I _seemed_ to be able to write code to use it effectively, then a month later I would have no idea of what I had written or why it seemed to work. Here's a receipt:
+Confession: for years, I have struggled to wrap my head around non-standard evaluation. I would sit down over a weekend and get myself to the point that I _thought_ I understood it, I _seemed_ to be able to write code to use it effectively, then a month later I would have no idea of what I had written or why it seemed to work. Here's a receipt:
 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Personal <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> resolution: 2016 will be the year I wrap my head around non-standard evaluation (just like 2015, 2014, 2013, ...)</p>&mdash; Ian Lyttle (@ijlyttle) <a href="https://twitter.com/ijlyttle/status/682678320039899141?ref_src=twsrc%5Etfw">December 31, 2015</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-At first glance, tidyeval can seem just as mysterious. Upon further inspection, tidyeval is built on a series of principles; as I came to understand (at least some of) these principles, it became easier for me to retrace my steps and to take new ones. At this point I think I understand the basic principles such that, at the risk of telling you more than I know, I can discuss those basics here.
+At first glance, tidyeval can seem just as mysterious - a new way to deal with non-standard evaluation. I came to appreciate that tidyeval is built on a series of principles; as I came to understand (at least some of) these principles, it became easier for me to retrace my steps and to take new ones. At this point I think I understand the basic principles such that, at the risk of telling you more than I know, I can discuss those basics here.
 
 Of course, none of this material is possible without the work done by Lionel Henry and Hadley Wickham, who developed the tidyeval framework. Indeed, the examples shown here are adapted from their sources:
 
@@ -34,34 +35,140 @@ Of course, none of this material is possible without the work done by Lionel Hen
 
 I am particularly impressed with the "Erratum" article, as it explains very well the factors that went into a design choice, as well as the factors that went into the decision to modify that choice.
 
+The goal of this tutorial is to make it easier for you to tackle these references.
+
 As you go through this tutorial, please keep in mind that I am an imperfect interpeter of tidyeval principles. I will do my best to convey what I understand; any shortcomings are my sole responsibility, which I will recitify as they become apparent ([issue page](https://github.com/ijlyttle/learnr.tidyeval/issues)).
 
 ## What motivates tidyeval?
 
+### Advantages
 
+You are probably used to **dplyr** code that looks like this:
+
+```{r}
+filter(starwars, species == "Droid")
+```
+
+This does the same thing as base R code: 
+
+```{r}
+starwars[starwars$species == "Droid" &  !is.na(starwars$species), ]
+```
+
+The dplyr code is more concise - you don't have to repeat the name of the data frame, or specify that you don't want `NA` values.
+
+As well, you may have used dplyr to access databases. If the `starwars` tibble were stored on a remote database, rather than in a local data-frame, dplyr would translate the expression `species == "Droid"` into SQL to obtain the same result. Tidyeval is the framework that dplyr uses to adapt the expression to the situation, so that "it just works".
+
+### Things to keep in mind
+
+However, as [Jar Jar discovered](https://youtu.be/qL1fBDQXSy8?t=1m40s), there is no such thing as a free lunch. There are a couple things to be mindful of.
+
+#### Referential transparency
+
+Most arguments to dplyr functions are not [__referentially transparent__](https://en.wikipedia.org/wiki/Referential_transparency). You can't replace an argument with a seemingly-equivalent argument that you have defined elsewhere.
+
+##### Your turn
+
+Let's look again at our earlier example:
+
+```{r}
+filter(starwars, species == "Droid")
+```
+
+Try the following substitutions and see what happens:
+
+```{r eval=FALSE}
+my_var <- species
+filter(starwars, my_var == "Droid")
+
+my_var <- "species"
+filter(starwars, my_var == "Droid")
+```
+
+```{r starwars-my_var, exercise=TRUE}
+filter(starwars, species == "Droid")
+```
+
+As you see, neither of these substitutions works how we expect - so it is not obvious how to call dplyr functions without hard-coding everything.
+
+#### Ambiguity
+
+As well, dplyr evaluates expressions ambiguously. As we will see, the code `filter(df, x == y)` can be interpreted differently depending on the data and the context:
+
+```{r eval=FALSE}
+df[df$x == df$y, ]
+df[df$x == y, ]
+df[x == df$y, ]
+df[x == y, ]
+```
+
+If the "wrong" thing happens when you are working interactively, you can see that there is a problem and correct it. If the "wrong" thing happens when you are calling a function (from a function, from a packge, ...), it can be nearly impossible to figure out what went wrong, let alone fix it.
+
+##### Your turn
+
+Let's say we want to look at the Star Wars characters, comparing eye-color and hair-color.
+
+In the code-block below:
+
+1. Run the code as-is.
+1. Uncomment the `eye_color == "black"` line, rerun.
+1. Uncomment the `my_color == "black"` line, change the filter expression to `hair_color == my_color`, rerun.
+1. Fiddle around with other varaibles and filter expressions.
+
+What can you tell about the rules that `dplyr::filter()` uses to evaluate an expression?
+
+```{r starwars-eye-hair, exercise=TRUE}
+# eye_color <- "black"
+# my_color <- "black"   
+filter(starwars, hair_color == eye_color)
+```
+
+### Summary
+
+Tidyeval provides a set of rules for the default evaluation of expressions, and a set of tools that let you change that default whenever you need to. For people who write functions and people who use those functions, tidyeval provides a framework that allows both sets of people be confident that a function will do what they expect it to do.
+
+In the next few sections, we will discuss the principles and concepts of tidyeval, then show how you can use these to call functions that use tidyeval (like those in dplyr). Finally, we will discuss how you can write functions that use the tidyeval framework.
 
 ## Principles and concepts
 
+quoting example
+
+tidyverse functions focus on data frames
+
+data first, then context.
+
+
+
+
+### Values, expressions, and symbols (oh my!)
+
+This may be a good time to recall the [famous quote from _Advanced R_](https://adv-r.hadley.nz/functions.html#all-calls):
+
+> “To understand computations in R, two slogans are helpful:
+> 
+> Everything that exists is an object.
+> Everything that happens is a function call."
+> — John Chambers
+
+In this section, we will go over three important kinds of objects.
+
+We are talking about using filter on local data frames, database backends may work a little differently.
+
+if you send filter a value, that works.
+
+if you send filter an expression, it evaluates the expression first using the data, then using the context.
+
+you can build expressions usig symbols
+
 ## Using functions that use tidyeval
+
+### "selecty" functions
 
 ## Writing functions that use tidyeval
 
 ## More stuff
 
-This is going to start out as an adaptation of the __dplyr__ [vignette on programming using tidyeval](http://dplyr.tidyverse.org/articles/programming.html).  
 
-You are probably used to **dplyr** code that looks like this:
-
-```{r tbl_mtcars-nse, exercise=TRUE}
-tbl_mtcars %>%
-  filter(cyl == 4, gear == 3)
-```
-
-Which does the same thing as: 
-
-```{r tbl_mtcars-se, exercise=TRUE}
-tbl_mtcars[tbl_mtcars$cyl == 4 & tbl_mtcars$gear == 3]
-```
 
 - Operations on data frames
 
