--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,10 @@ knitr::opts_chunk$set(
 
 # learnr.tidyeval
 
-The goal of learnr.tidyeval is to ...
+[![Travis-CI Build Status](https://travis-ci.org/ijlyttle/learnr.tidyeval.svg?branch=master)](https://travis-ci.org/ijlyttle/learnr.tidyeval)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/learnr.tidyeval)](https://cran.r-project.org/package=learnr.tidyeval)
+
+The goal of learnr.tidyeval is to support an interactive tutorial for tidyeval.
 
 ## Installation
 
@@ -25,10 +28,3 @@ You can install learnr.tidyeval from github with:
 devtools::install_github("ijlyttle/learnr.tidyeval")
 ```
 
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-## basic example code
-```
